--- a/.github/workflows/pyright.yaml
+++ b/.github/workflows/pyright.yaml
@@ -5,6 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: actions-rust-lang/setup-rust-toolchain@v1  # optionnal, just for speedup
       - name: Extract pyright version from pre-commit
         id: pre-commit-pyright-version
         run: |
